<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Written by Federico Sanna (federico.sanna15@ic.ac.uk)
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the
  ~ documentation and/or other materials provided with the distribution.
  ~
  ~ 3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this
  ~ software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
  ~ LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
  ~ HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
  ~ LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~ ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
  ~ USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#ffffff">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="368dp"
        android:layout_height="10dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="#ffffff">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="#ffffff">

        <Button
            android:id="@+id/btn_select"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="12dp"
            android:text="@string/connect"
            android:textColor="#ffffff"
            android:background="@drawable/btn_back"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="#ffffff">


    </LinearLayout>
    <LinearLayout

        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="#ffffff">
        
        <Button
            android:id="@+id/tap_base"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/outline_button"
            android:text="@string/tap_base"
            android:textColor="@color/green"
            android:layout_margin="6dp"
            android:padding="0dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="#ffffff">


    </LinearLayout>

    <RelativeLayout

        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="300dp"

        android:layout_margin="10dp"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:weightSum="2">


        <Button
            android:id="@+id/upward_pitch"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/trapezium_up"
            android:padding="0dp"
            android:text="@string/upward_pitch"
            android:textColor="@color/green" />

        <Button
            android:id="@+id/downward_pitch"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/trapezium_down"
            android:padding="0dp"
            android:text="@string/downward_pitch"
            android:textColor="@color/green" />

        <Button
            android:id="@+id/left_roll"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/trapezium_left"
            android:padding="10dp"
            android:text="@string/left_roll"
            android:textColor="@color/green" />

        <Button
            android:id="@+id/right_roll"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/trapezium_right"
            android:padding="10dp"
            android:text="@string/right_roll"
            android:textColor="@color/green" />

        <Button
            android:id="@+id/flip_base"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="100dp"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/outline_button"
            android:padding="0dp"
            android:text="@string/flip"
            android:textColor="@color/green" />

    </RelativeLayout>


</LinearLayout>
